--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ issueTrackerURL="https://github.com/ZarenFW/Lumens/Issues" #optional
 # The modid of the mod
 modId="lumens" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.0.0" #mandatory
+version="0.0.1" #mandatory
  # A display name for the mod
 displayName="Lumens" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
@@ -27,7 +27,7 @@ logoFile="examplemod.png" #optional
 authors="Zaren" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-7 tiers of highly adjustable solar panels for use by other modpacks
+Lumens is a "Mystical Tech" mod, adding a series of solar panels for early-to-late game power generation.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.lumens]] #optional
